Added test to check whether error models with extra chars are correctly handled. The test passes with revision 3793 of ospell.cc, and fails with revision 3729.
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@3796 941e2c2b-deac-454f-805a-451daa25f33c

--- a/Makefile.am
+++ b/Makefile.am
@@ -106,11 +106,12 @@ check_DATA=speller_basic.zhfst empty_descriptions.zhfst \
 		   empty_titles.zhfst empty_locale.zhfst \
 		   trailing_spaces.zhfst \
 		   spl.hfstol sug.hfstol err.hfstol \
-		   acceptor.default.hfst errmodel.default.hfst
+		   acceptor.default.hfst errmodel.default.hfst \
+		   errmodel.extrachars.hfst bad_errormodel.zhfst
 # Actual test scripts:
 TESTS=basic-zhfst.sh basic-legacy.sh basic-zhfst-fallback.sh \
 	  empty-descriptions.sh empty-titles.sh empty-locale.sh \
-	  trailing-spaces.sh
+	  trailing-spaces.sh bad-errormodel.sh
 XFAIL_TESTS=empty-descriptions.sh empty-titles.sh empty-locale.sh
 EXTRA_DIST=$(TXTS) basic_test.xml empty_descriptions.xml test.strings $(TESTS)
 
@@ -138,6 +139,10 @@ trailing_spaces.zhfst: acceptor.default.hfst errmodel.default.hfst trailing_spac
 # N.B. Do not parallel test, race condition exists
 speller_basic.zhfst: acceptor.default.hfst errmodel.default.hfst basic_test.xml
 	cp $(srcdir)/basic_test.xml index.xml
+	$(ZIP) $(ZIPFLAGS) $@ acceptor.default.hfst errmodel.default.hfst index.xml
+
+bad_errormodel.zhfst: acceptor.default.hfst errmodel.extrachars.hfst index.xml
+	cp -f $(srcdir)/errmodel.extrachars.hfst errmodel.default.hfst
 	$(ZIP) $(ZIPFLAGS) $@ acceptor.default.hfst errmodel.default.hfst index.xml
 
 sug.hfstol: acceptor.default.hfst
