Added a rule for man page creation in Makefile.am.
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@3846 941e2c2b-deac-454f-805a-451daa25f33c

--- a/Makefile.am
+++ b/Makefile.am
@@ -162,3 +162,6 @@ err.hfstol: errmodel.default.hfst
 
 .txt.hfstol:
 	hfst-txt2fst $(HFST_FLAGS) $< | hfst-fst2fst $(HFST_FLAGS) -f olw -o $@
+
+hfst-ospell.1: hfst-ospell
+	help2man --no-discard-stderr $< > $@
