--- a/Makefile.am
+++ b/Makefile.am
@@ -190,4 +190,4 @@ no_errormodel.zhfst: acceptor.basic.hfst no_errmodel.xml
 	-rm index.xml acceptor.default.hfst
 
 .txt.hfst:
-	hfst-txt2fst $(HFST_FLAGS) $< | hfst-fst2fst $(HFST_FLAGS) -f olw -o $@
+	hfst-txt2fst -e "@0@" $(HFST_FLAGS) $< | hfst-fst2fst $(HFST_FLAGS) -f olw -o $@
