Some beginnings for a documented stable API.
git-svn-id: svn://svn.code.sf.net/p/hfst/code/trunk@3875 941e2c2b-deac-454f-805a-451daa25f33c

--- a/Makefile.am
+++ b/Makefile.am
@@ -191,3 +191,8 @@ no_errormodel.zhfst: acceptor.basic.hfst no_errmodel.xml
 
 .txt.hfst:
 	hfst-txt2fst -e "@0@" $(HFST_FLAGS) $< | hfst-fst2fst $(HFST_FLAGS) -f olw -o $@
+
+if CAN_DOXYGEN
+doxygen:
+	$(DOXYGEN)
+endif
