not supporting default autostuff like promised...
manually added  autogen.sh ... make check

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: cpp
 compiler:
-    -clang
-    -gcc
+    - clang
+    - gcc
 before_install:
     - sudo apt-get install libxml++2.6-dev libarchive-dev
     - wget http://apertium.projectjj.com/apt/install-nightly.sh -O - | sudo bash
     - sudo apt-get install hfst
+script:
+    - ./autogen.sh
+    - ./configure
+    - make
+    - make check
