Fixes for big endian conversions; Make use of AC_C_BIGENDIAN and WORDS_BIGENDIAN; UCHAR_MAX should be +1 to allow hitting index 255

--- a/configure.ac
+++ b/configure.ac
@@ -141,6 +141,7 @@ AC_TYPE_SIZE_T
 # Checks for structures
 
 # Checks for compiler characteristics
+AC_C_BIGENDIAN
 
 # Checks for library functions
 AC_FUNC_MALLOC
