Remove HFST dependency - fixes #26; Move tests to folder

--- a/Makefile.am
+++ b/Makefile.am
@@ -65,7 +65,7 @@ hfst_ospell_CXXFLAGS=$(AM_CXXFLAGS) $(CXXFLAGS) \
 
 if HFST_OSPELL_OFFICE
 
-hfst_ospell_office_SOURCES=office.cpp
+hfst_ospell_office_SOURCES=office.cc
 hfst_ospell_office_LDADD=libhfstospell.la
 hfst_ospell_office_CXXFLAGS=$(AM_CXXFLAGS) $(CXXFLAGS) $(PKG_CXXFLAGS)
 
@@ -118,97 +118,11 @@ pkgconfigdir=$(libdir)/pkgconfig
 pkgconfig_DATA=hfstospell.pc
 
 # tests
-if CAN_TEST
-TXTS=acceptor.basic.txt analyser.default.txt \
-	 errmodel.basic.txt errmodel.extrachars.txt errmodel.edit1.txt
-check_DATA=speller_basic.zhfst empty_descriptions.zhfst \
-		   empty_titles.zhfst empty_locale.zhfst \
-		   trailing_spaces.zhfst \
-		   acceptor.basic.hfst errmodel.basic.hfst \
-		   errmodel.extrachars.hfst bad_errormodel.zhfst \
-		   speller_analyser.zhfst no_errormodel.zhfst \
-		   speller_edit1.zhfst
-# Actual test scripts:
-TESTS=basic-zhfst.sh basic-edit1.sh \
-	  empty-descriptions.sh empty-titles.sh empty-locale.sh \
-	  trailing-spaces.sh bad-errormodel.sh empty-zhfst.sh \
-	  analyse-spell.sh no-errormodel.sh
-XFAIL_TESTS=empty-descriptions.sh empty-titles.sh empty-locale.sh empty-zhfst.sh
-EXTRA_DIST=$(TXTS) $(TESTS) $(man1_MANS)\
-			basic_test.xml empty_descriptions.xml empty_titles.xml \
-			empty_locale.xml trailing_spaces.xml no_errmodel.xml \
-			test.strings
-
-clean-local:
-	-rm -rf $(check_DATA) index.xml
-endif # CAN_TEST
-
-# N.B. Do not parallel test, race condition exists
-# N.B. Do not parallel test, race condition exists
-empty_descriptions.zhfst: acceptor.basic.hfst errmodel.basic.hfst empty_descriptions.xml
-	cp -f $(srcdir)/empty_descriptions.xml index.xml
-	cp -f acceptor.basic.hfst acceptor.default.hfst
-	cp -f errmodel.basic.hfst errmodel.default.hfst
-	$(ZIP) $(ZIPFLAGS) $@ acceptor.default.hfst errmodel.default.hfst index.xml
-	-rm -f index.xml acceptor.default.hfst errmodel.default.hfst
-
-empty_titles.zhfst: acceptor.basic.hfst errmodel.basic.hfst empty_titles.xml
-	cp -f $(srcdir)/empty_titles.xml index.xml
-	cp -f acceptor.basic.hfst acceptor.default.hfst
-	cp -f errmodel.basic.hfst errmodel.default.hfst
-	$(ZIP) $(ZIPFLAGS) $@ acceptor.default.hfst errmodel.default.hfst index.xml
-	-rm -f index.xml acceptor.default.hfst errmodel.default.hfst
-
-empty_locale.zhfst: acceptor.basic.hfst errmodel.basic.hfst empty_locale.xml
-	cp -f $(srcdir)/empty_locale.xml index.xml
-	cp -f acceptor.basic.hfst acceptor.default.hfst
-	cp -f errmodel.basic.hfst errmodel.default.hfst
-	$(ZIP) $(ZIPFLAGS) $@ acceptor.default.hfst errmodel.default.hfst index.xml
-	-rm -f index.xml acceptor.default.hfst errmodel.default.hfst
-
-trailing_spaces.zhfst: acceptor.basic.hfst errmodel.basic.hfst trailing_spaces.xml
-	cp -f $(srcdir)/trailing_spaces.xml index.xml
-	cp -f acceptor.basic.hfst acceptor.default.hfst
-	cp -f errmodel.basic.hfst errmodel.default.hfst
-	$(ZIP) $(ZIPFLAGS) $@ acceptor.default.hfst errmodel.default.hfst index.xml
-	-rm -f index.xml acceptor.default.hfst errmodel.default.hfst
-
-speller_edit1.zhfst: acceptor.basic.hfst errmodel.edit1.hfst basic_test.xml
-	cp $(srcdir)/basic_test.xml index.xml
-	cp -f acceptor.basic.hfst acceptor.default.hfst
-	cp -f errmodel.edit1.hfst errmodel.default.hfst
-	$(ZIP) $(ZIPFLAGS) $@ acceptor.default.hfst errmodel.default.hfst index.xml
-	-rm -f index.xml acceptor.default.hfst errmodel.default.hfst
-
-speller_basic.zhfst: acceptor.basic.hfst errmodel.basic.hfst basic_test.xml
-	cp $(srcdir)/basic_test.xml index.xml
-	cp -f acceptor.basic.hfst acceptor.default.hfst
-	cp -f errmodel.basic.hfst errmodel.default.hfst
-	$(ZIP) $(ZIPFLAGS) $@ acceptor.default.hfst errmodel.default.hfst index.xml
-	-rm -f index.xml acceptor.default.hfst errmodel.default.hfst
-
-speller_analyser.zhfst: analyser.default.hfst errmodel.edit1.hfst basic_test.xml
-	cp -f $(srcdir)/basic_test.xml index.xml
-	cp -f analyser.default.hfst acceptor.default.hfst
-	cp -f errmodel.edit1.hfst errmodel.default.hfst
-	$(ZIP) $(ZIPFLAGS) $@ acceptor.default.hfst errmodel.default.hfst index.xml
-	-rm -f index.xml acceptor.default.hfst errmodel.default.hfst
-
-bad_errormodel.zhfst: acceptor.basic.hfst errmodel.extrachars.hfst basic_test.xml
-	cp -f $(srcdir)/basic_test.xml index.xml
-	cp -f acceptor.basic.hfst acceptor.default.hfst
-	cp -f errmodel.extrachars.hfst errmodel.default.hfst
-	$(ZIP) $(ZIPFLAGS) $@ acceptor.default.hfst errmodel.default.hfst index.xml
-	-rm -f index.xml acceptor.default.hfst errmodel.default.hfst
-
-no_errormodel.zhfst: acceptor.basic.hfst no_errmodel.xml
-	cp -f $(srcdir)/no_errmodel.xml index.xml
-	cp -f acceptor.basic.hfst acceptor.default.hfst
-	$(ZIP) $(ZIPFLAGS) $@ acceptor.default.hfst index.xml
-	-rm -f index.xml acceptor.default.hfst
-
-.txt.hfst:
-	hfst-txt2fst -e "@0@" $< | hfst-fst2fst -f olw -o $@
+TESTS=tests/basic-zhfst.sh tests/basic-edit1.sh \
+	  tests/empty-descriptions.sh tests/empty-titles.sh tests/empty-locale.sh \
+	  tests/trailing-spaces.sh tests/bad-errormodel.sh tests/empty-zhfst.sh \
+	  tests/analyse-spell.sh tests/no-errormodel.sh
+XFAIL_TESTS=tests/empty-descriptions.sh tests/empty-titles.sh tests/empty-locale.sh tests/empty-zhfst.sh
 
 if CAN_DOXYGEN
 doxygen:
